[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprites/kenney_medievalrtspack/PNG/Default size/Tile/medievalTile_57.png" type="Texture" id=1]
[ext_resource path="res://scripts/grid_background.gd" type="Script" id=2]
[ext_resource path="res://scripts/camera.gd" type="Script" id=3]
[ext_resource path="res://sprites/kenney_medievalrtspack/PNG/Default size/Tile/medievalTile_58.png" type="Texture" id=4]
[ext_resource path="res://scenes/grid_background_square.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/oskar/tileset.svg" type="Texture" id=6]
[ext_resource path="res://fonts/arial_24.tres" type="DynamicFont" id=7]
[ext_resource path="res://scripts/not_yet_implemented_popup.gd" type="Script" id=8]
[ext_resource path="res://scripts/paint_grid.gd" type="Script" id=9]
[ext_resource path="res://scenes/menu_button.tscn" type="PackedScene" id=10]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PaintGrid" type="Node2D"]
script = ExtResource( 9 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 300 )
current = true
script = ExtResource( 3 )

[node name="GridBackground" type="GridContainer" parent="."]
margin_right = 640.0
margin_bottom = 640.0
mouse_filter = 2
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
auto_populate = true
rows = 10

[node name="GridBackgroundSquare1" parent="GridBackground" instance=ExtResource( 5 )]
margin_right = 64.0
margin_bottom = 64.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TilesetGrid" type="GridContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -132.0
mouse_filter = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect1" type="TextureRect" parent="CanvasLayer/TilesetGrid"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/TilesetGrid"]
margin_top = 68.0
margin_right = 64.0
margin_bottom = 132.0
texture = ExtResource( 4 )

[node name="TopToolbar" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/TopToolbar"]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
margin_bottom = 95.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/TopToolbar"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="CanvasLayer/TopToolbar/HBoxContainer"]
margin_right = 101.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "New"

[node name="OpenButton" type="Button" parent="CanvasLayer/TopToolbar/HBoxContainer"]
margin_left = 105.0
margin_right = 206.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Open"

[node name="DownloadButton" type="Button" parent="CanvasLayer/TopToolbar/HBoxContainer"]
margin_left = 210.0
margin_right = 326.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Download"

[node name="UndoButton" type="Button" parent="CanvasLayer/TopToolbar/HBoxContainer"]
margin_left = 330.0
margin_right = 431.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Undo"

[node name="RedoButton" type="Button" parent="CanvasLayer/TopToolbar/HBoxContainer"]
margin_left = 435.0
margin_right = 536.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Redo"

[node name="ResizeGridButton" type="Button" parent="CanvasLayer/TopToolbar/HBoxContainer"]
margin_left = 540.0
margin_right = 676.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Resize Grid"

[node name="SelectButton" type="Button" parent="CanvasLayer/TopToolbar/HBoxContainer"]
margin_left = 680.0
margin_right = 781.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Select"

[node name="DrawButton" type="Button" parent="CanvasLayer/TopToolbar/HBoxContainer"]
margin_left = 785.0
margin_right = 886.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Draw"

[node name="PanButton" type="Button" parent="CanvasLayer/TopToolbar/HBoxContainer"]
margin_left = 890.0
margin_right = 991.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Pan"

[node name="ZoomButton" type="Button" parent="CanvasLayer/TopToolbar/HBoxContainer"]
margin_left = 995.0
margin_right = 1096.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Zoom"

[node name="SettingsButton" type="Button" parent="CanvasLayer/TopToolbar/HBoxContainer"]
margin_left = 1100.0
margin_right = 1201.0
margin_bottom = 85.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Settings"

[node name="MenuButton" parent="CanvasLayer/TopToolbar/HBoxContainer" instance=ExtResource( 10 )]
margin_left = 1205.0
margin_right = 1276.0
margin_bottom = 85.0
custom_fonts/font = ExtResource( 7 )

[node name="NotYetImplementedPopup" type="PopupPanel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.105882 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBackground" type="Panel" parent="CanvasLayer/NotYetImplementedPopup"]
self_modulate = Color( 1, 1, 1, 0.129412 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/NotYetImplementedPopup/PanelBackground"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/NotYetImplementedPopup/PanelBackground/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 7 )
text = "Not implemented yet..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/NotYetImplementedPopup/PanelBackground/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = 40.0
margin_right = 87.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 7 )
text = "OK"

[node name="BottomPanel" type="Panel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 0.25
anchor_top = 1.0
anchor_right = 0.75
anchor_bottom = 1.0
margin_top = -115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/BottomPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BottomPanel/HBoxContainer"]
margin_right = 120.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BottomPanel/HBoxContainer/VBoxContainer"]
margin_right = 120.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/BottomPanel/HBoxContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 120.0
margin_bottom = 95.0
text = "Your Map"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/BottomPanel/HBoxContainer"]
margin_left = 160.0
margin_right = 280.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BottomPanel/HBoxContainer/VBoxContainer2"]
margin_right = 120.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/BottomPanel/HBoxContainer/VBoxContainer2"]
margin_top = 81.0
margin_right = 120.0
margin_bottom = 95.0
text = "CCC #1"
align = 1
valign = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="CanvasLayer/BottomPanel/HBoxContainer"]
margin_left = 320.0
margin_right = 440.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BottomPanel/HBoxContainer/VBoxContainer3"]
margin_right = 120.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/BottomPanel/HBoxContainer/VBoxContainer3"]
margin_top = 81.0
margin_right = 120.0
margin_bottom = 95.0
text = "CCC #2"
align = 1
valign = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="CanvasLayer/BottomPanel/HBoxContainer"]
margin_left = 480.0
margin_right = 600.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/BottomPanel/HBoxContainer/VBoxContainer4"]
margin_right = 120.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/BottomPanel/HBoxContainer/VBoxContainer4"]
margin_top = 81.0
margin_right = 120.0
margin_bottom = 95.0
text = "CCC #3"
align = 1
valign = 1
